# ts-to-mp4

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
.github/workflows/: ci.yml  deploy-pages.yml
examples/: remux.rs
scripts/: compare-timing.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/fixtures/: test_738x720.ts  test_with_audio.ts
web/: app.js  index.html  style.css
