[package]
name = "ts-to-mp4"
version = "0.1.0"
edition = "2021"
description = "Remux MPEG-TS to MP4 without transcoding (stream copy)"

[lib]
name = "ts_to_mp4"
path = "src/lib.rs"

[[bin]]
name = "ts-to-mp4"
path = "src/main.rs"

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
tempfile = "3"
