[package]
name = "ts-to-mp4"
version = "0.1.0"
edition = "2021"
description = "Remux MPEG-TS to MP4 without transcoding (stream copy)"
license = "AGPL-3.0"
repository = "https://github.com/rajbot/ts-to-mp4"
keywords = ["video", "mp4", "mpeg-ts", "remux", "h264"]
categories = ["multimedia::video", "command-line-utilities"]

[lib]
name = "ts_to_mp4"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ts-to-mp4"
path = "src/main.rs"

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
cli = ["clap"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
tempfile = "3"
